[scul] refactor create order
